# lipsum

./: .appveyor.yml  .dir-locals.el  .drone.yml  .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  coverage.yml  prepare-release.yml
benches/: generate.rs  learn.rs
examples/: lipsum.rs
src/: lib.rs
tests/: version-numbers.rs
